action section and productive user section done

--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -93,6 +93,7 @@ nav li{
 .banner-container{
     margin-top: 37px;
     
+    
 }
 
 /* Action section */
@@ -121,4 +122,173 @@ nav li{
 }
 .image-section {
     padding-right: 159px;
+   
+}
+.action-image { border-radius: 48px;
+
+}
+
+/* productive-users-section */
+.productive-users-section {
+   
+    background-color:rgb(78, 71, 255, 10%);
+    margin-top: 116px;
+    margin-left: 141px;
+    margin-right: 159px;
+    border-radius: 24px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 142px;
+    padding-right: 142px;
+}
+
+.center-title {
+    font-weight:700 ;
+    font-size: 38px;
+    color: #252432;
+    text-align: center;
+    padding-top: 50px;
+}
+
+
+.data {
+    list-style: none;
+    display: inline;
+    justify-content: space-between;
+    display: flex;
+    
+}
+
+.first-data {
+    font-weight: 700;
+    font-size: 80px;
+    
+}
+.first-data-subtitle{
+    font-weight: 400;
+    font-size: 20px;
+    
+    
+}
+
+.second-data{
+    
+    font-weight: 700;
+    font-size: 80px;
+}
+
+.second-data-subtitle{
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.third-data{
+    font-weight: 700;
+    font-size: 80px;
+}
+
+.third-data-subtitle{
+     font-weight: 400;
+    font-size: 20px;
+}
+
+/* Ratting Section */
+
+.rating-section{
+   margin-top: 137px;
+   margin-left: 149px;
+   margin-left: 151px;
+   margin-bottom: 137px;
+   
+
+}
+
+.rating-title{
+    font-weight: 700;
+    font-size:42px ;
+    color: #252432;
+    text-align: center;
+    padding-bottom: 50px;
+}
+.rating-container{
+    display: flex;
+   
+}
+.rating-box{
+    margin-right: 20px;
+    border-radius: 14px;
+    background-color: rgb(255, 255, 255, 50%);
+
+}
+
+.rating-description{
+     padding-top: 24px;
+}
+
+
+
+/* Get in Touch section */
+
+.get-in-touch-section {
+    padding-top: 92.23px;
+    display: flex;
+    margin-left: 150px;
+    margin-right: 150px;
+}
+
+.get-in-touch-section-title{
+    font-weight: 700;
+    font-size: 97px;
+    color: #000000;
+
+}
+
+.form-elements{
+    font-weight: 500;
+    font-size: 18px;
+    padding-left: 115px;
+}
+.get-in-touch-button{
+    padding-left: 201px;
+    padding-right: 201px;
+    padding-top: 19px;
+    padding-bottom: 19px;
+    margin-top: 19px;
+}
+ .form-elements label {
+    display: block;
+    margin-top: 19px;
+ }
+ /* footer */
+
+ .footer-section{
+    text-align: center;
+    margin-top: 104px;
+    margin-bottom: 103px;
+ }
+
+ .website-name{
+    font-weight:900 ;
+    font-size: 100px;
+    color:#4E47FF ;
+    text-align: center;
+    padding-bottom: 8px;
+    padding-left: 120px;
+    padding-right: 120px;
+ }
+ 
+ .footer-section-subtitle{
+    font-weight: ;
+    font-size: ;
+    color: #8987A1;
+    padding-bottom: 20px;
+
+ }
+.footer-items a{
+    text-decoration: none;
+    
+}
+.footer-items{
+    justify-content: space-around;
+
 }
