--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -20,6 +20,12 @@
 
 }
 
+main{
+    background-color:rgba(214, 221, 237, 0.3);
+    padding-bottom: 104px;
+    
+}
+
 .btn{
     font-weight: 700;
     font-size: 16;
@@ -156,6 +162,7 @@ nav li{
     display: inline;
     justify-content: space-between;
     display: flex;
+    padding-top: 40px;
     
 }
 
@@ -194,11 +201,15 @@ nav li{
 
 /* Ratting Section */
 
-.rating-section{
-   margin-top: 137px;
+.rating{
+    margin-top: 137px;
    margin-left: 149px;
    margin-left: 151px;
-   margin-bottom: 137px;
+   /* margin-bottom: 137px; */
+}
+.rating-section{
+   display: flex;
+  justify-content: space-between;
    
 
 }
@@ -218,13 +229,43 @@ nav li{
     margin-right: 20px;
     border-radius: 14px;
     background-color: rgb(255, 255, 255, 50%);
-
+   
 }
 
 .rating-description{
-     padding-top: 24px;
+    margin-top: 8px;
+     font-size: 16px;
+     font-weight: 400;
 }
 
+.rating-container2{
+    display: flex;
+    gap: 12px;
+    margin-top: 24px;
+}
+.rating-title2{
+    font-size: 24px;
+    font-weight: 600;
+}
+.rating-container3 h3{
+    font-size: 16px;
+    font-weight: 600;
+    color: #757575;
+}
+.rating-container3 p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #B3B3B3;
+}
+
+.star-icon{
+    margin-bottom: 24px;
+}
+.rating-card{
+    padding: 24px;
+    background-color: white;
+    border-radius: 14px;
+}
 
 
 /* Get in Touch section */
@@ -240,7 +281,15 @@ nav li{
     font-weight: 700;
     font-size: 97px;
     color: #000000;
+    width: 528px;
+    height: 232px;
+  
 
+}
+.form-elements form > input,form textarea,form button{
+    text-align: center;
+    width: 500px;
+    height: 70px;
 }
 
 .form-elements{
@@ -259,6 +308,7 @@ nav li{
     display: block;
     margin-top: 19px;
  }
+ 
  /* footer */
 
  .footer-section{
